add profile photo project images

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- Hero Section -->
         <section id="home" class="hero">
             <div class="container">
-                <div class="hero-content">
+                <div class="hero-flex">
                     <div class="hero-content">
                         <div class="hero-greeting">👋 Hello!</div>
                         <h1>I’m <span>Abdul Razzaq</span>, Developing Production-Ready Web Systems</h1>
@@ -74,6 +74,9 @@
                             <!-- <a href="RESUME_URL" class="btn btn-secondary" style="border: none; background: transparent; padding: 0.8rem 1rem;">Download CV</a> -->
                         </div>
                     </div>
+                    <div class="hero-image-container">
+                        <img src="Abdul3.png" alt="Abdul Razzaq" class="hero-profile-img">
+                    </div>
                 </div>
             </div>
 
@@ -88,7 +91,7 @@
             <div class="container">
                 <div class="section-title">About Me</div>
                 <div class="glass-card">
-                    <div class="grid" style="grid-template-columns: 2fr 1fr; align-items: center; gap: 3rem;">
+                    <div class="about-content">
                         <div class="about-text">
                             <h3 style="margin-bottom: 1rem; font-size: 1.5rem;">I design digital products that make a
                                 difference.</h3>
@@ -112,12 +115,6 @@
                                     <div style="font-size: 2rem; font-weight: 700; color: var(--accent);">02+</div>
                                     <div style="font-size: 0.9rem; color: var(--text-muted);">Years Experience</div>
                                 </div> -->
-                            </div>
-                        </div>
-                        <div class="about-image" style="position: relative;">
-                            <!-- Placeholder for Image -->
-                            <div
-                                style="width: 100%; padding-bottom: 100%; background: rgba(255,255,255,0.05); border-radius: 20px; border: 1px solid var(--border-card);">
                             </div>
                         </div>
                     </div>
@@ -291,9 +288,9 @@
                     <!-- Project 1: Gym Management -->
                     <div class="glass-card project-card">
                         <div class="project-image">
-                            <!-- Placeholder -->
                             <div
-                                style="width: 100%; height: 100%; background: linear-gradient(45deg, #0f2027, #203a43);">
+                            style="width: 100%; height: 100%; background: linear-gradient(45deg, #0f2027, #203a43);">
+                            <img src="gym-image.png" alt="gym-image">
                             </div>
                         </div>
                         <h3>Gym Management System (MERN)</h3>
@@ -337,6 +334,7 @@
                             <!-- Placeholder -->
                             <div
                                 style="width: 100%; height: 100%; background: linear-gradient(45deg, #1a1a1a, #2a2a2a);">
+                                <img src="restaurant-image.png" alt="restaurant-image">
                             </div>
                         </div>
                         <h3>Restaurant Management System (MERN)</h3>
