compress profile pic

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <div class="hero-image-container">
-                        <img src="Abdul3.png" alt="Abdul Razzaq" class="hero-profile-img">
+                        <img src="Abdul.png" alt="Abdul Razzaq" class="hero-profile-img">
                     </div>
                 </div>
             </div>
