--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                         <div class="hero-btns">
                             <a href="#projects" class="btn btn-primary">View Live Projects</a>
-                            <a href="#contact" class="btn btn-secondary">Hire Me</a>
+                            <a href="#contact" class="btn btn-secondary">Get in Touch</a>
                             <!-- <a href="RESUME_URL" class="btn btn-secondary" style="border: none; background: transparent; padding: 0.8rem 1rem;">Download CV</a> -->
                         </div>
                     </div>
@@ -295,7 +295,7 @@
                             </div>
                         </div>
                         <h3>Gym Management System (MERN)</h3>
-                        <p style="color: white; margin-top: 0.5rem; font-size: 0.95rem; font-weight: 500;">
+                        <p class="project-desc" style="margin-top: 0.5rem; font-size: 0.95rem; font-weight: 500;">
                             Automated member management, payments tracking, and admin analytics for gyms.
                         </p>
 
@@ -318,7 +318,8 @@
                                 Live Demo
                             </a>
                             <a href="https://github.com/abdulrazzaq27/gym" target="_blank"
-                                style="color: white; font-size: 0.9rem; display: flex; align-items: center; gap: 0.5rem;">
+                                class="source-code-link"
+                                style="font-size: 0.9rem; display: flex; align-items: center; gap: 0.5rem;">
                                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2">
                                     <path
@@ -339,7 +340,7 @@
                             </div>
                         </div>
                         <h3>Restaurant Management System (MERN)</h3>
-                        <p style="color: white; margin-top: 0.5rem; font-size: 0.95rem; font-weight: 500;">
+                        <p class="project-desc" style="margin-top: 0.5rem; font-size: 0.95rem; font-weight: 500;">
                             Full-stack real-time order tracking and staff coordination platform.
                         </p>
 
@@ -363,7 +364,8 @@
                                 Live Demo
                             </a>
                             <a href="https://github.com/abdulrazzaq27/restaurant-management-system" target="_blank"
-                                style="color: white; font-size: 0.9rem; display: flex; align-items: center; gap: 0.5rem;">
+                                class="source-code-link"
+                                style="font-size: 0.9rem; display: flex; align-items: center; gap: 0.5rem;">
                                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2">
                                     <path
@@ -396,7 +398,7 @@
 
                         <div class="timeline-item">
                             <h4 style="font-size: 1.2rem;">MS Junior College</h4>
-                            <p style="color: white;">MPC</p>
+                            <p style="color: var(--text-muted);">MPC</p>
                             <p style="color: var(--text-muted); font-size: 0.9rem; margin-top: 0.2rem;">2021 - 2023 |
                                 Grade: 90%</p>
                         </div>
